@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: alchemy recipes report.
+Nicolas Weeger 2010-07-21
+
 CRE: display if artifacts can be generated through alchemy.
 Nicolas Weeger 2010-07-21
 
